--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport"
+      content="width=device-width,initial-scale=1.0,max-scale=1.0,min-scale=1.0,user-scalable=no">
     <title>sell</title>
+    <link rel="stylesheet" href="static/css/reset.css">
   </head>
+
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
